<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_chat">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/chat_background">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/loadMessagesSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chatMessagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageButton
            android:id="@+id/scrollDownImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:background="@mipmap/ic_scroll_down"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:id="@+id/chatTypingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:padding="5dp"
        android:textColor="@color/complete_white"
        android:textSize="15sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stickersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/complete_white"
        android:scrollbars="horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="2dp"
        android:background="@color/white_pressed"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="5dp"
        android:paddingStart="0dp"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/stickersMenuImageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_stickers_menu" />

        <EditText
            android:id="@+id/chatSendMessageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/complete_white"
            android:hint="@string/hint_edit_text"
            android:inputType="textMultiLine|textShortMessage"
            android:padding="2dp" />

        <ImageButton
            android:id="@+id/chatSendMessageButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/send_button"
            android:src="@drawable/ic_action_send_dark" />

    </LinearLayout>

</LinearLayout>