...
                    android:lines="1"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/messageContentTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:maxWidth="250dp"
                android:textSize="16sp" />
...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageEditMessage"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_edit" />

        </LinearLayout>

...
