...
    <string name="enter_room_subject_hint">Enter room subject here</string>
    <string name="enter_new_room_subject">Enter a new subject for the room</string>
    <string name="room_subject_changed">Room subject changed</string>
    <string name="want_to_leave_chat">Do you want to leave this chat?</string>
    <string name="want_to_delete_chat">Do you want to delete this chat?</string>
    <string name="want_to_destroy_chat">Do you want to destroy this chat?</string>
    <string name="correct_message">Correct message</string>
    <string name="message_to_blocked_user">Can\'t send message to a blocked contact</string>
    <string name="cant_send_message">Couldn\'t send message</string>
    <string name="enter_new_message">Enter the new body</string>
    <string name="typing">%1$s is typing &#8230;</string>

    <string name="muc_chat_type">MUC</string>
...
